# BarTracking

./: .RData  .Rhistory  .gitignore  BarTracking.py  MANIFEST.in  README.md  datasets.py  myUtils.py  opencvtest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  track.py  trainModel.ipynb  videoTest.ipynb
.github/workflows/: python-package.yml
BarTracking/: __init__.py  data_path.py  modelUtils.py  track.py
bar-tracking/: __init__.py
dev/: requirements.txt
dev/STM/: helpers.py  model.py
dev/test/: testAll.py  videoTest.ipynb
dev/train/: PlateDataset.py  convert.ipynb  createJSON.ipynb  createMasks.ipynb  create_data.jl  datasets.py  model_info.json  trainModel.ipynb
julia/: BarTracking.jl  DataUtils.jl  Manifest.toml  Model.jl  Project.toml  mnist.bson  model.bson  notebook.jl  train.jl  train_mnist.jl
julia/data/: codes.txt
julia/old/: BarTracking.jl  BarTrackingNotebook.jl  DataUtils.jl  Manifest.toml  Model.jl  Project.toml  bbox.jl  dataStuct.jl  regmodel.bson  svm.ipynb  train_reg.jl  train_seg.jl
test/: datasets.py  myUtils.py  videoTest.ipynb
tests/: test.py  test_BarTracking.py
train_data/: annotations.csv  createCSV.py  createMasks.py
training/: PlateBoundingBoxModel.py  annotationsGRAY240.json  annotationsRGB120.json  annotationsRGB240.json  annotationsRGB360.json  annotationsRGB480.json  annotationsRGB720.json  create_plate_images.py  create_random_images.py  initialPlateBoundingBoxModel.py  model.py  plateBoundingBoxModel.py  platesClassCenterModel.py  process_video.py  recurrentPlateBoundingBoxModel.py
(+1573 files in other folders)
