[metadata]
name = bar-tracking-cluffa
version = 0.1
author = Alex Cluff
author_email = alexcluff16@gmail.com
description = A bar tracking application for personal use
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cluffa/bar_tracking
project_urls =
    Bug Tracker = https://github.com/cluffa/bar_tracking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = setuptools, numpy, scipy, pandas, scikit-image, torch, torchvision, opencv-python

[options.packages.find]
where = src